[package]
name = "galaxies"
version = "0.1.0"
authors = ["Adrien Burgun <adrien.burgun@orange.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
scoped_threadpool = "0.1.*"
raqote = "0.8.0"
minifb = "0.19.3"
